# marker-checker

./: .dockerignore  .gitignore  .greennode.example.json  Dockerfile  Makefile  README.md  deploy.example.env  main.py  pyproject.toml  requirements.txt  runtime.example.yaml  runtime.yaml
.agents/skills/agentbase/: SKILL.md
agent/: main.py  pyproject.toml
agent/scripts/: gen_asyncapi.py
agent/src/agent/: app.py  config.py  draft_manager.py  request_coordinator.py
contracts/: asyncapi.yaml
docs/: README.md  marker-checker-agent-spec.md
docs/delivery-plan/: README.md  agentbase-execution-plan.md  agentbase-native-migration.md  implementation-plan.md  risks-assumptions-and-open-questions.md  roadmap.md
docs/future/: ai-review-assistance.md
docs/product-spec/: README.md  chat-and-review-capabilities.md  data-model-and-audit.md  data-model-audit.md  overview.md  workflow-and-lifecycle.md  workflow-lifecycle.md
docs/technical-design/: README.md  architecture-diagrams.md  architecture.md  configuration-and-integrations.md  configuration-integrations.md  diagrams.md  recommended-tech-stack.md  scope-and-channel-decision.md  standalone-vs-agentbase-native.md  web-ui.md
frontend/: index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.ts  tsconfig.app.json
frontend/public/: examples.md
frontend/public/locales/: en.json  vi.json
frontend/scripts/: gen-contracts.mjs
frontend/src/: App.tsx  index.css
frontend/src/contexts/: theme.tsx
frontend/src/hooks/: useChatSession.ts  useWebSocket.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: chatComposerConfig.ts  chatTime.ts  chatTypes.ts  chatUi.ts  codeDiff.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
marker_checker_agent/: __init__.py  ai_input_assistance.py  ai_prompts.py  app.py  config.py  draft_manager.py  enums.py  intent_router.py  models.py  orchestrator.py  request_coordinator.py  runtime.py
marker_checker_agent/adapters/: telegram_adapter.py  telegram_handlers.py
marker_checker_agent/ai/: __init__.py  assistant.py  intent_types.py  llm_client.py  prompts.py  types.py
marker_checker_agent/domain/: __init__.py  enums.py  models.py
marker_checker_agent/parsing/: __init__.py  intent_router.py  request_parser.py
marker_checker_agent/persistence/: __init__.py  base.py  factory.py  google_sheets.py  google_sheets_mapper.py
marker_checker_agent/services/: __init__.py  audit_service.py  request_service.py  workflow_transitions.py
tests/: test_approver_identity.py  test_config_overrides.py  test_freeform_intents.py  test_intent_routing.py  test_llm_assistance.py  test_request_flow.py  test_runtime_aliases.py  test_smoke_workflow.py  test_telegram_adapter.py  test_ws_contract.py  workflow_test_support.py
(+57 files in other folders)
