[project]
name = "marker-checker-agent"
version = "0.1.0"
description = "Approval workflow agent for marker checking"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.1.2,<7.0.0",
    "google-auth>=2.35.0,<3.0.0",
    "greennode-agentbase",
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.8.2,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "python-telegram-bot>=21.4,<22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marker_checker_agent"]
