[project]
name = "marker-checker-agent"
version = "0.1.0"
description = "Approval workflow agent for marker checking"
requires-python = ">=3.11"
dependencies = [
    "gspread>=6.1.2,<7.0.0",
    "google-auth>=2.35.0,<3.0.0",
    "greennode-agentbase>=1.0.3,<2.0.0",
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.8.2,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "python-telegram-bot>=21.4,<22.0",
    "cachetools>=5.3,<6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0,<3.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.15,<1.0",
    "types-cachetools>=7.0.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marker_checker_agent"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [".claude", ".agents"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (no stray print statements)
    "G",    # flake8-logging-format
    "PERF", # perflint (performance anti-patterns)
    "TCH",  # flake8-type-checking (move type-only imports to TYPE_CHECKING)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["marker_checker_agent"]

[tool.ruff.lint.per-file-ignores]
# LLM prompt strings contain long JSON examples that cannot be line-wrapped.
"marker_checker_agent/ai/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["yaml", "cachetools", "cachetools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.oauth2.*"]
ignore_missing_imports = true
disallow_untyped_calls = false
